# sideline

./: .gitignore  CLAUDE.md  README.md  TASKS.md  batch_analyze.py  eval_models.py  main.py  pyproject.toml  requirements-sim.txt  server.py  vercel.json
.devcontainer/: devcontainer.json
actions/robot/: __init__.py  base.py  demo.py  gestures.py  mock.py  mujoco_so101.py
agent/: core.py  parsing.py  prompts.py  state.py  tools.py
dashboard/: about.html  architecture.html  future.html  home.html  index.html  playground.html  robot-embed.html  robots.html  simulation.html  tennis_rally_cache.json
docs/: AGENT.md  DEMO.md  HACKATHON.md  MODELS.md  PLAN.md  ROBOTS.md
public/clips/: tennis_atp_cache.json  tennis_curated_cache.json  tennis_match_cache.json
simulation/so101/: scene.xml
video/: extractor.py
video/clips/: tennis_atp_cache.json  tennis_demo_cache.json
