[project]
name = "sideline"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.135.1",
    "httpx>=0.28.1",
    "openai>=2.28.0",
    "opencv-python-headless>=4.13.0.92",
    "python-multipart>=0.0.22",
    "uvicorn>=0.41.0",
    "websockets>=16.0",
]
